--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.scss"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"],
+            "baseHref": "/"
           },
           "configurations": {
             "production": {
