redirects otra vez

--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
               "src/assets/favicon/favicon.ico",
               "src/assets/favicon/site.webmanifest",
               "src/assets",
+              "src/_redirects",
               {
                 "glob": "**/*",
                 "input": "public"
